# mingling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  run-tools.ps1  run-tools.sh
.cargo/: config.toml
dev_tools/: Cargo.toml
dev_tools/scripts/: windows-folder-hide.ps1
dev_tools/src/: lib.rs
docs/: README.md  index.html
docs/_zh_CN/: README.md  index.html
docs/_zh_CN/pages/: 1-creating-your-first-program.md  2-implementing-fallbacks.md  3-parsing-complex-arguments.md
docs/css/: dark.css  light.css
docs/pages/: 1-creating-your-first-program.md  2-implementing-fallbacks.md  3-parsing-complex-arguments.md
docs/res/: ci_banner.txt  graph.drawio  graph.html  guide.txt
docs/scripts/: day-night-switch.js
examples/example-async/src/: main.rs
examples/example-basic/src/: main.rs
examples/example-completion/src/: main.rs
examples/example-dispatch-tree/: Cargo.toml
examples/example-dispatch-tree/src/: main.rs
examples/example-exit-code/: Cargo.toml
examples/example-exit-code/src/: main.rs
examples/example-general-renderer/: Cargo.toml
examples/example-general-renderer/src/: main.rs
examples/example-picker/src/: main.rs
examples/example-resources/: Cargo.toml
examples/example-resources/src/: main.rs
mingling/: Cargo.toml  README.md
mingling/src/: example_docs.rs  features.rs  lib.rs  res.rs  setups.rs
mingling/src/parser/: args.rs  picker.rs
mingling/src/parser/picker/: bools.rs
mingling/src/res/: exit_code.rs
mingling/src/setups/: basic.rs  exit_code.rs  general_renderer.rs
mingling_core/: Cargo.toml
mingling_core/src/: any.rs  asset.rs  comp.rs  debug.rs  lib.rs  program.rs  tester.rs
mingling_core/src/asset/: comp.rs  dispatcher.rs  global_resource.rs
mingling_core/src/asset/chain/: error.rs
mingling_core/src/asset/comp/: flags.rs  suggest.rs
mingling_core/src/builds/: comp.rs
mingling_core/src/comp/: installation.rs  shell_ctx.rs
mingling_core/src/program/: config.rs  error.rs  exec.rs  flag.rs  hook.rs  once_exec.rs  repl_exec.rs  setup.rs  string_vec.rs
mingling_core/src/program/exec/: error.rs
mingling_core/src/program/repl_exec/: splitter.rs
mingling_core/src/program/setup/: exit_code_control.rs  general_renderer.rs
mingling_core/src/renderer/: general.rs  render_result.rs
mingling_core/src/tester/: chain_process_tester.rs
mingling_macros/: Cargo.toml
mingling_macros/src/: chain.rs  completion.rs  dispatch_tree_gen.rs  dispatcher.rs  dispatcher_clap.rs  groupped.rs  help.rs  lib.rs  pack.rs  program_setup.rs  renderer.rs
mling/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
mling/res/: version.txt
mling/src/: project_installer.rs
mling/src/cli/: install.rs  list.rs  namespace_mgr.rs  read.rs
mling/tmpl/: load.ps1
