[package]
name = "mingling_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Macros of the mingling library"

[lib]
proc-macro = true

[features]
nightly = []
default = []
async = []

clap = []
comp = []
dispatch_tree = []
general_renderer = []
repl = []

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

just_fmt.workspace = true
once_cell.workspace = true
