[package]
name = "mingling-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mingling's scaffolding tool"

[[bin]]
name = "mling"
path = "src/main.rs"

[dependencies]
mingling = { path = "../mingling", features = [
    "builds",
    "parser",
    "comp",
    "general_renderer",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

colored = "3.1.1"
dirs = "6.0.0"
just_fmt = "0.1.2"
toml.workspace = true

[build-dependencies]
mingling = { path = "../mingling", features = ["comp"] }
